# renter-x-backend

./: .coveragerc  .env  .gitignore  LICENSE  README.md  coverage.xml  debug_page.html  last_page_content.html  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: test.yml
buildings/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
buildings/forum/: __init__.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
buildings/forum/migrations/: 0001_initial.py  0002_remove_category_parent.py  0003_alter_post_tags.py  0004_post_likes.py  0005_alter_post_options_alter_post_likes.py
buildings/management/commands/: create_forum_data.py  run_scrapers.py
buildings/migrations/: 0001_initial.py  0002_alter_region_neighborhood.py  0002_apartmentwatchlist_buildingwatchlist.py  0003_watchlistalert.py  0004_alter_newuserprofile_managers_and_more.py  0005_alter_pricechange_scraping_run.py  0006_remove_newuserprofile_buildings_n_created_e02036_idx_and_more.py  0007_region_building_region_and_more.py
buildings/sc/: queue.py  schemas.py
buildings/sc/configs/: jackson_park.yaml  journal_squared.yaml  pearl_house.yaml  sven.yaml
buildings/sc/configs/notrun/: journal_squared.yaml  pearl_house.yaml
buildings/sc/core/: engine.py  monitors.py  parsers.py  transformers.py
buildings/tests/: conftest.py  factories.py  test_api.py  test_models.py  test_signals.py  test_views.py  test_watchlist.py
core/: settings.py  urls.py
